@@ -39,7 +39,7 @@ xcutsel_SOURCES =	\
 
 # man pages
 
-appman_SOURCES = \
+appman_PRE = \
         xclipboard.man \
         xcutsel.man
 
@@ -65,9 +65,9 @@ CLEANFILES = $(APPDEFAULTFILES)
 
 appmandir = $(APP_MAN_DIR)
 
-appman_DATA = $(appman_SOURCES:man=@APP_MAN_SUFFIX@)
+appman_DATA = $(appman_PRE:man=@APP_MAN_SUFFIX@)
 
-EXTRA_DIST += $(appman_SOURCES)
+EXTRA_DIST += $(appman_PRE)
 CLEANFILES += $(appman_DATA)
 
 SED = sed
